# mpc

./: .gitignore  Dockerfile  pyproject.toml
.ci/: black.cfg  flake8.ini  isort.cfg  mypy.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  cleanup_cache.yml
src/mpc/: cost.py  example.py  example_fcn.py  linearized_dynamics.py  main.py  problem.py  solver.py  system.py
src/mpc/transform/: integral_action.py  nonzero_target.py  output_cost.py  transform.py
tests/: test_app.py  test_numpy.py
tests/transform/: common.py  conftest.py  test_output_cost.py  test_transform.py
