[tool.poetry]
name = "mpc"
version = "0.0.1"
description = ""
authors = [
    "Andrea Camisa <andrea.camisa92@gmail.com>",
    "Ivano Notarnicola <ivano.notarnicola@gmail.com>"
]
packages = [
    { include = "mpc", from = "src" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
typing-extensions = ">=4.0.1"
osqp = "^0.6.3"
numpy = "^1.19.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^5.0.0"
isort = "^5.12.0"
pytest = "^7.3.0"
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
